SVY-16294 [ng2 designer] implement responsive mode wireframe: -selection decorators for containers in wireframe mode -redraw decorators on  wireframe state changed -fix for wireframe not showing initially if the wireframe mode was already on -partial fix for large responsive form height (content was not visible)

--- a/com.servoy.eclipse.designer.rfb/node/src/designer/mouseselection/mouseselection.component.css
+++ b/com.servoy.eclipse.designer.rfb/node/src/designer/mouseselection/mouseselection.component.css
@@ -5,6 +5,20 @@
     border: 1px solid #0099FF;
 }
 
+.decorationOverlay.showWireframe::before {
+  content				  : attr(svytitle);
+  background-color		  : var(--svyBackgroundColor);
+  border                  : 1px solid #0099FF;
+  border-bottom           : none;
+  border-top-left-radius  : 5px;
+  border-top-right-radius : 5px;
+  font					  : 12px Arial, sans-serif;
+  margin-top			  : -20px;
+  margin-left			  : 20px;
+  padding                 : 2px 10px 3px 10px;
+  position				  : absolute;
+}
+
 .lasso {
     position:absolute;
     left: 0px;
