--- a/com.servoy.eclipse.designer.rfb/src/rfb/angular/css/editor.css
+++ b/com.servoy.eclipse.designer.rfb/src/rfb/angular/css/editor.css
@@ -297,7 +297,7 @@ html, body
 }
 
 #highlight.showWireframe::before {
-  content				  : attr(svytitle);
+  content				  : attr(svy-title);
   background-color		  : var(--svyBackgroundColor);
   border                  : 1px dotted rgb(0, 153, 255);
   border-bottom           : none;
